--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-21  Martin Baulig  <martin@ximian.com>
+
+	* languages/TargetType.cs
+	(TargetType.HasClassType): New public abstract property.
+	(TargetType.ClassType): Likewise.
+
 2007-09-17  Martin Baulig  <martin@ximian.com>
 
 	* languages/TargetType.cs
