2007-09-25  Martin Baulig  <martin@ximian.com>
	* classes/Method.cs
	(Method): Replace the `This', `Locals' and `Parameters' by methods
	which take a `TargetMemoryAccess' argument.  This is neccessary
	for generics.
	(Method.This): Replaced by GetThis().
	(Method.Parameters): Replaced by GetParameters().
	(Method.Locals): Replaced by GetLocalVariables().
	(Method.GetVariableByName): Removed.

	* classes/StackFrame.cs
	(StackFrame.Locals): Removed.


svn path=/trunk/debugger/; revision=86303

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2007-09-25  Martin Baulig  <martin@ximian.com>
+
+	* classes/Method.cs
+	(Method): Replace the `This', `Locals' and `Parameters' by methods
+	which take a `TargetMemoryAccess' argument.  This is neccessary
+	for generics.
+	(Method.This): Replaced by GetThis().
+	(Method.Parameters): Replaced by GetParameters().
+	(Method.Locals): Replaced by GetLocalVariables().
+	(Method.GetVariableByName): Removed.
+
+	* classes/StackFrame.cs
+	(StackFrame.Locals): Removed.
+
 2007-09-24  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoLanguageBackend.cs
