2007-09-28  Martin Baulig  <martin@ximian.com>
	* backend/arch/Architecture_I386.cs
	(Architecture_I386.GetLMF): Make this work again.


svn path=/trunk/debugger/; revision=86570

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-28  Martin Baulig  <martin@ximian.com>
 
+	* backend/arch/Architecture_I386.cs
+	(Architecture_I386.GetLMF): Make this work again.
+
+2007-09-28  Martin Baulig  <martin@ximian.com>
+
 	* backend/ProcessServant.cs
 	(ProcessServant.read_thread_table): Truncate the `TID' to 32-bits
 	on 32-bit machines.
