2007-09-28  Martin Baulig  <martin@ximian.com>
	HEADS UP: The debugger doens't work with SVN HEAD at the moment !
	          The last supported version is r86592.

	* backend/MonoThreadManager.cs
	(MonoDebuggerInfo.MinDynamicVersion): Require 60.


svn path=/trunk/debugger/; revision=86613

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 2007-09-28  Martin Baulig  <martin@ximian.com>
 
+	HEADS UP: The debugger doens't work with SVN HEAD at the moment !
+	          The last supported version is r86592.
+
 	* backend/MonoThreadManager.cs
-	(MonoDebuggerInfo.MinDynamicVersion): Require 61.
+	(MonoDebuggerInfo.MinDynamicVersion): Require 60.
 
 2007-09-28  Martin Baulig  <martin@ximian.com>
 
