2007-10-15  Martin Baulig  <martin@ximian.com>
	HEADS UP: The debugger currently doesn't work with the latest mono
	          from SVN HEAD.  You need to use r87189 for the moment.

	Sorry about the breakage, there's nothing I can do about it at the
	moment and it will most likely take a few days to get it fixed.


svn path=/trunk/debugger/; revision=87514

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,10 @@
 2007-10-15  Martin Baulig  <martin@ximian.com>
 
-	* backend/arch/Architecture_X86_64.cs
-	(Architecture_X86_64.GetTrampoline): Add support for the new
-	common vtable trampolines.
+	HEADS UP: The debugger currently doesn't work with the latest mono
+	          from SVN HEAD.  You need to use r87189 for the moment.
+
+	Sorry about the breakage, there's nothing I can do about it at the
+	moment and it will most likely take a few days to get it fixed.
 
 2007-10-10  Martin Baulig  <martin@ximian.com>
 
