2007-10-16  Martin Baulig  <martin@ximian.com>
	* backend/ILanguageBackend.cs
	(ILanguageBackend.GetTrampoline): Removed.


svn path=/trunk/debugger/; revision=87544

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-16  Martin Baulig  <martin@ximian.com>
 
+	* backend/ILanguageBackend.cs
+	(ILanguageBackend.GetTrampoline): Removed.
+
+2007-10-16  Martin Baulig  <martin@ximian.com>
+
 	* backend/arch/Architecture.cs
 	(Architecture.CallTargetType): Add `NativeTrampoline',
 	`NativeTrampolineStart' and `MonoTrampoline'.
