--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-16  Martin Baulig  <martin@ximian.com>
 
+	* backend/ILanguageBackend.cs: Removed.
+	(ILanguageBackend): Removed.
+
+2007-10-16  Martin Baulig  <martin@ximian.com>
+
 	* backend/ILanguageBackend.cs
 	(NotificationType): Moved into MonoThreadManager.cs.
 
